--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <script type="text/javascript" src="https://js.pay.jp/v2/pay.js"></script>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "actiontext", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/dist/css/bootstrap-datepicker.min.css">
   </head>
 
   <body>
@@ -47,6 +48,13 @@
       <%= yield %>
 
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/dist/js/bootstrap-datepicker.min.js"></script>
+    <script>
+      $(document).ready(function() {
+        $('.datepicker').datepicker();
+      });
+    </script>
     <footer class="container-fluid footer">
       <p class="copyright">Copyright © CampShare All rights reserved.</p>
     </footer>
