--- a/app/views/gears/index.html.erb
+++ b/app/views/gears/index.html.erb
@@ -72,7 +72,7 @@
 </div>
 <% end %>
 
-<% if Blog.count > 0 %>
+<% if Gear.count > 0 %>
   <div class="container " >
     <div class="row gap-3 " style="margin: auto;">
       <% @gears.each do |gear| %>
