--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,42 +1,97 @@
-<div class="main">
-  <div class="inner">
-    <div class="user__wrapper">
-      <h2 class="page-heading">
-        <%= "#{@user.name}さんの情報"%>
-      </h2>
-      <table class="table">
-        <tbody>
-          <tr>
-            <th class="table__col1">名前</th>
-            <td class="table__col2"><%= @user.name %></td>
-          </tr>
-          <tr>
-            <th class="table__col1">プロフィール</th>
-            <td class="table__col2"><%= @user.profile %></td>
-          </tr>
-        </tbody>
-      </table>
-      <h2 class="page-heading">
-        <%= "#{@user.name}さんのBlog"%>
-      </h2>
-      <div class="contaier">
-        <div id="blogs">
-          <% @user.blogs.each do |blog| %>
-          <div class="row">
-            <div class="col ">
-              <div class="card w-100">
-                <div class="card-body d-flex justify-content-between">
-                  <h5 class="card-title">
-                    Title:<%= blog.title %><br>
-                    <%= link_to "by #{blog.user.name}", user_path(@user) %>
-                  </h5>
-                    <p class="ml-5"><%= link_to "Show", blog ,  class: "btn btn-success mt-2"%></p>
-                </div>
+<%# About %>
+<div class="container col-md-10 mb-5">
+  <div class="container mb-5"><h1>About</h1></div>
+  <div class="container row">
+    <div class="col-md-3">
+      <% if @user.profile_image.attached? %>
+          <%= image_tag @user.profile_image, class: "img-thumbnail", size: "160x160" %>
+        <% end %>
+    </div>
+    <div class="col-md-9 mt-3">
+      <p class="mb-2"><span class="fw-bold">名前：　</span><%= @user.name %></p>
+      <p class="mb-2"><span class="fw-bold">地域：　</span><%= @user.prefecture&.name || '' %></p>
+      <p class="mb-2"><span class="fw-bold">自己紹介：　</span><br><%= simple_format(@user.profile || '') %></p>
+    </div>
+  </div>
+</div>
+
+<%# Contact %>
+<div class="container col-md-10 mb-5">
+  <div class="container mb-5"><h1>Contact</h1></div>
+  <div class="container row">
+    <p class="mb-2"><span class="fw-bold">電話番号：　<%= @user.phone_number || '' %></p>
+    <p class="mb-2"><span class="fw-bold">連絡可能な時間帯：　</span><%= @user.contact_time&.name || '' %><%= @user.contact_time_another if @user.contact_time&.name == 'その他' %></p>
+    <p class="mb-2"><span class="fw-bold">レンタルギアの受け取り可能な住所：　</span><%= @user.address || '' %></p>
+  </div>
+</div>
+
+<%# Edit %>
+<div class="container text-center mb-5">
+  <% if @user == current_user %>
+    <%= link_to 'プロフィール編集', edit_user_path(@user), class: "btn btn-primary" %>
+  <% end %>
+</div>
+
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col">
+
+      <!-- Gear Section -->
+      <div class="gear-section mb-5">
+        <h2 class="text-center mb-4"><%= @user.name %>さんのGears</h2>
+        <% if @gears.count > 0 %>
+          <div class="container">
+          <div class="row gap-3" style="margin: auto;">
+            <% @gears.each do |gear| %>
+            <div class="card card-effect col-md-4" style="width: 20rem;">
+              <%= image_tag gear.image, class: "gear-img m-3" if gear.image.attached? %>
+              <div class="card-body">
+                <h5 class="card-title"><%= gear.name %></h5>
+                <% if gear.order.present?%>
+                <p class="card-text badge rounded-pill text-bg-danger mb-2">ギアが予約されています</p>
+                <% else %>
+                <p class="card-text badge rounded-pill text-bg-info mb-2">レンタル可能です</p>
+                <% end %>
+                <p class="card-text mb-2"><span>日帰りプラン:</span> <%= "#{gear.price_1}円" %></p>
+                <p class="card-text mb-2"><span>1泊2日プラン:</span> <%= "#{gear.price_2}円" %></p>
+                <p class="card-text mb-3"><span>2泊3日プラン:</span> <%= "#{gear.price_3}円" %></p>
+                <p class="ml-5"><%= link_to "Show", gear_path(gear), class: "btn btn-success mt-2" %></p>
               </div>
             </div>
+            <% end %>
           </div>
-          <% end %>
         </div>
+        <% else %>
+          <p class="text-center fs-5 fst-italic text-danger">現在Gearはありません</p>
+        <% end %>
+      </div>
+
+      <!-- Blog Section -->
+      <div class="blog-section mb-5">
+        <h2 class="text-center mb-4"><%= @user.name %>さんのBlogs</h2>
+        <% if @blogs.count > 0 %>
+          <div class="container">
+            <div id="blogs">
+              <% @blogs.each do |blog| %>
+                <div class="row">
+                  <div class="col">
+                    <div class="card card-effect w-100">
+                      <div class="card-body d-flex justify-content-between">
+                        <h5 class="card-title">
+                          Blog Title: <%= blog.title %><br><br>
+                          <%= link_to "by #{blog.user.name}", user_path(blog.user) %>
+                        </h5>
+                        <p class="ml-5"><%= link_to "Show", blog, class: "btn btn-success mt-2" %></p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              <% end %>
+            </div>
+          </div>
+        <% else %>
+          <p class="text-center fs-5 fst-italic text-danger">現在Blogはありません</p>
+        <% end %>
       </div>
     </div>
   </div>
