--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,17 +24,15 @@
           <% if user_signed_in? %>
           <div class="nav__right">
             <%= link_to "ログアウト", destroy_user_session_path, class: :nav__logout , data: { turbo_method: :delete }%>
-            <%= link_to "Blogs", root_path, class: :nav__btn %>
-            <%= link_to "Gears", gears_path, class: :nav__btn %>
+            <%= link_to "Home", root_path, class: :nav__btn %>
             <%= link_to "NewBlog", new_blog_path, class: :nav__btn %>
             <%= link_to "NewGear", new_gear_path, class: :nav__btn %>
           </div>
           <% else %>
           <div class="nav__right">
+            <%= link_to "Home", root_path, class: :nav__btn %>
             <%= link_to "ログイン", new_user_session_path, class: :nav__btn %>
             <%= link_to "新規登録", new_user_registration_path, class: :nav__btn %>
-            <%= link_to "Blogs", root_path, class: :nav__btn %>
-            <%= link_to "Gears", gears_path, class: :nav__btn %>
           </div>
           <% end %>
         </div>
@@ -42,7 +40,7 @@
     </header>
 
 
-    <div class="container main overflow-auto">
+    <div class="container-fluid main col-11 overflow-auto">
 
       <p style="color: green"><%= notice %></p>
       <%= yield %>
@@ -50,13 +48,9 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/dist/js/bootstrap-datepicker.min.js"></script>
-    <script>
-      $(document).ready(function() {
-        $('.datepicker').datepicker();
-      });
-    </script>
-    <footer class="container-fluid footer">
-      <p class="copyright">Copyright © CampShare All rights reserved.</p>
+    <footer class="container-fluid footer text-center">
+      <p class="copyright d-inline">Copyright © CampShare All rights reserved.</p>
+      <%= link_to "プライバシーポリシーを読む", privacy_policy_path, target: "_blank", class: "ms-2 text-primary fw-semibold text-decoration-underline d-inline" %>
     </footer>
   </body>
 </html>
