"Updated JavaScript code in plan.js, Ruby code in order_reservation.rb, and HTML code in various views to modify rental information input and validation logic."

--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -30,8 +30,8 @@
       <table class="table table-bordered" style="margin: auto;">
         <thead>
           <tr>
-            <th scope="col">予約開始日</th>
-            <th scope="col">予約終了日</th>
+            <th scope="col">レンタル開始日</th>
+            <th scope="col">返却日</th>
           </tr>
         </thead>
         <tbody>
