--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,136 +1,129 @@
 <%= include_gon %>
 
-<%# Title %>
 <div class="container text-center fw-bold mb-5">
   <h1>レンタル情報入力画面</h1>
 </div>
 
-<%# レンタル内容確認 %>
 <div class="container text-center mb-5">
-  <%= image_tag @gear.image ,class:"img-thumbnail gear-box-img mb-3" if @gear.image.attached? %>
+  <%= image_tag @gear.image, class: "img-thumbnail gear-box-img mb-3" if @gear.image.attached? %>
   <h1 class="mb-3"><%= @gear.name %></h1>
   <p class="h4 mb-3">
     <span class="fw-semibold" id="plan-1">日帰りプラン(利用時間8:00~当日18:00まで):</span>
     <span id="price-1"><%= "　#{@gear.price_1}　円" %></span>
-    <span class="invisible" id="price-1-value"><%= "#{@gear.price_1}" %></span>
+    <span class="invisible" id="price-1-value"><%= @gear.price_1 %></span>
   </p>
   <p class="h4 mb-3">
     <span class="fw-semibold" id="plan-2">1泊2日プラン(利用時間8:00~翌日18:00まで):</span>
     <span id="price-2"><%= "　#{@gear.price_2}　円" %></span>
-    <span class="invisible" id="price-2-value"><%= "#{@gear.price_2}" %></span>
+    <span class="invisible" id="price-2-value"><%= @gear.price_2 %></span>
   </p>
   <p class="h4 mb-3">
     <span class="fw-semibold" id="plan-3">2泊3日プラン(利用時間8:00~翌々日18:00まで):</span>
     <span id="price-3"><%= "　#{@gear.price_3}　円" %></span>
-    <span class="invisible" id="price-3-value"><%= "#{@gear.price_3}" %></span>
+    <span class="invisible" id="price-3-value"><%= @gear.price_3 %></span>
   </p>
 </div>
 
-
-<%= form_with model: @order_reservation, url: gear_orders_path(@gear), id: 'charge-form', local: true do |f| %>
-
-<%# 予約日程入力 %>
-<div class="container w-50 mb-5">
+<div class="container w-75 mb-5">
   <p class="h2 text-center mb-5 fw-bold">予約日程</p>
-  <div class="mb-3">
-    <%= f.label :start_date, "レンタル開始日", class: 'label col fw-semibold' %>
-    <span class="badge rounded-pill text-bg-danger">必須</span>
-  </div>
-  <div class="row mb-3">
-    <%= f.date_field :start_date, class: 'date-select form-control datepicker', id: 'start-date' %>
-  </div>
-  <div class="mb-3">
-    <%= f.label :end_date, "返却日", class: 'label col fw-semibold' %>
-    <span class="badge rounded-pill text-bg-danger">必須</span>
-  </div>
-  <div class="row mb-3">
-    <%= f.date_field :end_date, class: 'date-select form-control datepicker', id: 'end-date' %>
-  </div>
-</div>
+  <% if @order_reservation.errors.any? %>
+    <div class="alert alert-danger" role="alert">
+      <% @order_reservation.errors.full_messages.each do |message| %>
+        <%= message %><br>
+      <% end %>
+    </div>
+  <% end %>
 
-
-
-<div class="container text-center mb-5">
-  <p class="h2 mb-3 fw-semibold">お客様のプランと金額は下記となります。</p>
-  <p class="h5 mb-3 fst-italic text-danger" id="caution">※予約日程を入力しないと表示されません。</p>
-  <div class="d-flex justify-content-center">
-    <span class="fs-5" id="selected-plan"></span>
-    <span class="fs-5" id="selected-price"></span>
-  </div>
-  <%= f.text_field :price, class:"form-control invisible", id:"price-parameter", placeholder:"日付が選択されたら自動に入力されます。" %>
-</div>
-
-
-<%# 顧客情報入力 %>
-<div class="container w-70">
-  <div class="mb-3">
-    <div>
-      <label for="exampleFormControlInput1" class="form-label fw-semibold">お名前</label>
+  <%= form_with model: @order_reservation, url: gear_orders_path(@gear), id: 'charge-form', local: true do |f| %>
+    <div class="mb-3">
+      <%= f.label :start_date, "レンタル開始日", class: 'label col fw-semibold' %>
+      <span class="badge rounded-pill text-bg-danger me-2">必須</span><span class="text-danger">(注意：本日より1週間後以降からレンタルの予約可能となります。)</span>
+    </div>
+    <div class="row mb-3">
+      <%= f.date_field :start_date, class: 'date-select form-control datepicker', id: 'start-date' %>
+    </div>
+    <div class="mb-3">
+      <%= f.label :end_date, "返却日", class: 'label col fw-semibold' %>
       <span class="badge rounded-pill text-bg-danger">必須</span>
     </div>
-    <%= f.text_field :name, class:"form-control mb-5", id:"addresses", placeholder:"例）キャンプ太郎"%>
-  </div>
-
-  <div class="mb-3">
-    <div>
-      <label for="exampleFormControlInput1" class="form-label fw-semibold">ご住所</label>
-      <span class="badge rounded-pill text-bg-danger">必須</span>
+    <div class="row mb-3">
+      <%= f.date_field :end_date, class: 'date-select form-control datepicker', id: 'end-date' %>
     </div>
-    <%= f.text_field :address, class:"form-control mb-5", id:"addresses", placeholder:"例）〒123-4567 東京都板橋区青山1-1-1 ABCビル101号"%>
-  </div>
 
-  <div class="mb-3">
-    <div>
-      <label for="exampleFormControlInput1" class="form-label fw-semibold">電話番号</label>
-      <span class="badge rounded-pill text-bg-danger">必須</span>
+    <div class="container text-center mb-5">
+      <p class="h2 mb-3 fw-semibold">お客様のプランと金額は下記となります。</p>
+      <p class="h5 mb-3 fst-italic text-danger" id="caution">※予約日程を入力しないと表示されません。</p>
+      <div class="d-flex justify-content-center">
+        <span class="fs-5" id="selected-plan"></span>
+        <span class="fs-5" id="selected-price"></span><span class="fs-5" id="currency"></span>
+      </div>
+      <%= f.hidden_field :price, id: "price-parameter" %>
     </div>
-    <%= f.text_field :phone_number, class:"form-control mb-5", id:"phone-number", placeholder:"例）09012345678",maxlength:"11"%>
-  </div>
+
+    <div class="container w-70">
+      <div class="mb-3">
+        <div class="mb-3">
+          <%= f.label :name, "お名前", class: 'form-label fw-semibold' %>
+          <span class="badge rounded-pill text-bg-danger">必須</span>
+        </div>
+        <%= f.text_field :name, class: 'form-control mb-5', id: 'name', placeholder: "例）キャンプ太郎" %>
+      </div>
+
+      <div class="mb-3">
+        <div class="mb-3">
+          <%= f.label :address, "ご住所", class: 'form-label fw-semibold' %>
+          <span class="badge rounded-pill text-bg-danger">必須</span>
+        </div>
+        <%= f.text_field :address, class: 'form-control mb-5', id: 'address', placeholder: "例）〒123-4567 東京都板橋区青山1-1-1 ABCビル101号" %>
+      </div>
+
+      <div class="mb-3">
+        <div class="mb-3">
+          <%= f.label :phone_number, "電話番号", class: 'form-label fw-semibold' %>
+          <span class="badge rounded-pill text-bg-danger">必須</span>
+        </div>
+        <%= f.text_field :phone_number, class: 'form-control mb-5', id: 'phone-number', placeholder: "例）09012345678", maxlength: "11" %>
+      </div>
+    </div>
+
+    <div class="container w-50">
+      <div class='credit-card-form'>
+        <h1 class='info-input-headline text-center fw-semibold mb-5'>
+          クレジットカード情報入力
+        </h1>
+        <div class="form-group">
+          <div class='form-text-wrap mb-2'>
+            <label class="form-text">カード情報</label>
+            <span class="badge rounded-pill text-bg-danger">必須</span><br><br>
+            <div id="number-form" class="input-default mb-3"></div>
+          </div>
+          <div class='available-card text-center mb-5'>
+            <%= image_tag 'card-visa.gif', class: 'card-logo'%>
+            <%= image_tag 'card-mastercard.gif', class: 'card-logo'%>
+            <%= image_tag 'card-jcb.gif', class: 'card-logo'%>
+            <%= image_tag 'card-amex.gif', class: 'card-logo'%>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class='form-text-wrap mb-5'>
+            <label class="form-text">有効期限</label>
+            <span class="badge rounded-pill text-bg-danger">必須</span><br><br>
+            <div id="expiry-form" class="input-default"></div>
+          </div>
+        </div>
+        <div class="form-group mb-5">
+          <div class='form-text-wrap'>
+            <label class="form-text">セキュリティコード</label>
+            <span class="badge rounded-pill text-bg-danger">必須</span><br><br>
+            <div id="cvc-form" class="input-default"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container d-grid col-8 gap-4 mt-5">
+      <%= f.submit "決定", class: "btn btn-danger" %>
+      <%= link_to 'もどる', root_path, class: "btn btn-primary mb-5" %>
+    </div>
+  <% end %>
 </div>
-
-
-<%# カード情報の入力 %>
-<div class="container w-50">
-  <div class='credit-card-form'>
-    <h1 class='info-input-haedline text-center fw-semibold mb-5'>
-      クレジットカード情報入力
-    </h1>
-    <div class="form-group">
-      <div class='form-text-wrap mb-2'>
-        <label class="form-text">カード情報</label>
-        <span class="badge rounded-pill text-bg-danger">必須</span><br><br>
-        <div id="number-form" class="input-default mb-3"></div>
-      </div>
-      <div class='available-card text-ce mb-5'>
-        <%= image_tag 'card-visa.gif', class: 'card-logo'%>
-        <%= image_tag 'card-mastercard.gif', class: 'card-logo'%>
-        <%= image_tag 'card-jcb.gif', class: 'card-logo'%>
-        <%= image_tag 'card-amex.gif', class: 'card-logo'%>
-      </div>
-    </div>
-    <div class="form-group">
-      <div class='form-text-wrap mb-5'>
-        <label class="form-text">有効期限</label>
-        <span class="badge rounded-pill text-bg-danger">必須</span><br><br>
-        <div id="expiry-form" class="input-default"></div>
-      </div>
-    </div>
-    <div class="form-group mb-5">
-      <div class='form-text-wrap'>
-        <label class="form-text">セキュリティコード</label>
-        <span class="badge rounded-pill text-bg-danger">必須</span><br><br>
-        <div id="cvc-form" class="input-default"></div>
-      </div>
-    </div>
-  </div>
-</div>
-<%# /カード情報の入力 %>
-
-<%# 下部ボタン %>
-<div class="container d-grid col-8 gap-4 mt-5">
-  <%= f.submit "決定", class:"btn btn-danger" %>
-  <%=link_to 'もどる', root_path, class:"btn btn-primary mb-5" %>
-</div>
-<%# /下部ボタン %>
-
-<% end %>
