--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,7 @@
     <script type="text/javascript" src="https://js.pay.jp/v2/pay.js"></script>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbo-track': 'reload' %>
     <%= stylesheet_link_tag "actiontext", "data-turbo-track": "reload" %>
-    <%= javascript_include_tag 'application', 'data-turbo-track': 'reload' %>
-    <%= javascript_include_tag 'actiontext', 'data-turbo-track': 'reload' %>
-    <%= javascript_importmap_tags %>
+    <%= javascript_pack_tag 'application', 'data-turbo-track': 'reload' %> <!-- 修正ポイント -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/dist/css/bootstrap-datepicker.min.css">
   </head>
@@ -20,11 +18,11 @@
       <div class="inner">
         <div class="nav">
           <div class="nav__left">
-            <%= link_to "CampShare" , root_path , class: :logo %>
+            <%= link_to "CampShare", root_path, class: :logo %>
           </div>
           <% if user_signed_in? %>
           <div class="nav__right">
-            <%= link_to "ログアウト", destroy_user_session_path, class: :nav__logout , data: { turbo_method: :delete }%>
+            <%= link_to "ログアウト", destroy_user_session_path, class: :nav__logout, data: { turbo_method: :delete } %>
             <%= link_to "MyPage", user_path(current_user), class: :nav__btn %>
             <%= link_to "Home", root_path, class: :nav__btn %>
             <%= link_to "NewBlog", new_blog_path, class: :nav__btn %>
@@ -41,12 +39,9 @@
       </div>
     </header>
 
-
     <div class="container-fluid main col-11 overflow-auto">
-
       <p style="color: green"><%= notice %></p>
       <%= yield %>
-
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/dist/js/bootstrap-datepicker.min.js"></script>
